--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
     }
 
     function getContext() {
+      liff.getElementById("type").append(liff.getContext().type)
+      liff.getElementById("viewType").append(liff.getContext().viewType)
+      liff.getElementById("utouId").append(liff.getContext().utouId)
+      liff.getElementById("roomId").append(liff.getContext().roomId)
+      liff.getElementById("groupId").append(liff.getContext().groupId)
     }
 
     async function getUserProfile() {
@@ -100,8 +105,7 @@
       await liff.init({ liffId: "1656769030-Z7qP92LY" })
       getEnvironment()
       getUserProfile()
-      
-      // getContext()
+      getContext()
       // getFriendship()
       // createUniversalLink()
     }
