--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     }
 
     function getContext() {
-      liff.getElementById("type").append(liff.getContext().type)
-      liff.getElementById("viewType").append(liff.getContext().viewType)
-      liff.getElementById("utouId").append(liff.getContext().utouId)
-      liff.getElementById("roomId").append(liff.getContext().roomId)
-      liff.getElementById("groupId").append(liff.getContext().groupId)
+      document.getElementById("type").append(liff.getContext().type)
+      document.getElementById("viewType").append(liff.getContext().viewType)
+      document.getElementById("utouId").append(liff.getContext().utouId)
+      document.getElementById("roomId").append(liff.getContext().roomId)
+      document.getElementById("groupId").append(liff.getContext().groupId)
     }
 
     async function getUserProfile() {
