--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
           }
         ])
         alert("Message sent")
+      }else{
+        alert("Unable to send message")
       }
     }
 
@@ -92,7 +94,7 @@
       document.getElementById("userId").append(profile.userId)
       document.getElementById("statusMessage").append(profile.statusMessage)
       document.getElementById("displayName").append(profile.displayName)
-      document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email + " *")
+      document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
     }
 
     function getEnvironment() {
