--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
     }
 
     async function getFriendship() {
+      const friend = await liff.getFriendship()
+      document.getElementById("friendship").append(friend.friendFlag)
+      if(!friend.friendFlag){
+        if(confirm("เพิ่มเพื่อนกับแชทบอท")){
+          // window.location = "" รีไดเรกไปไลน์แชทบอท
+        }
+      }
     }
 
     async function sendMsg() {
@@ -118,7 +125,7 @@
       getEnvironment()
       getUserProfile()
       getContext()
-      // getFriendship()
+      getFriendship()
       // createUniversalLink()
     }
     main()
