--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         if(confirm("เพิ่มเพื่อนกับแชทบอท")){
           // window.location = "" รีไดเรกไปไลน์แชทบอท
         }
+      }else{
+        alert("is firend?")
       }
     }
 
@@ -129,10 +131,13 @@
     async function main() {
       // alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1656769030-Z7qP92LY" })
-      getEnvironment()
-      getUserProfile()
-      getContext()
-      getFriendship()
+      document.getElementById("isLoggedIn").append(liff.isLoggedIn())
+      if(liff.isLoggedIn()){
+        getEnvironment()
+        getUserProfile()
+        getContext()
+        getFriendship()
+      }
       // createUniversalLink()
     }
     main()
