--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
         getUserProfile()
         getContext()
         getFriendship()
+      }else{
+        liff.login()
       }
       // createUniversalLink()
     }
