--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       document.getElementById("universalLink1").append(link1)
       
       liff.permanentLink.setExtraQueryParam('param=9')
-      const link2 = liff.getPermanentLink.createUrl()
+      const link2 = liff.permanentLink.createUrl()
       document.getElementById("universalLink2").append(link2)
     }
 
