--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         getFriendship()
         createUniversalLink()
       }else{
-        liff.login()
+        // liff.login()
       }
     }
     main()
