--- a/path/index.html
+++ b/path/index.html
@@ -40,6 +40,7 @@
       document.getElementById("displayName").append(profile.displayName)
       document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
     }
+    main()
   </script>
 </body>
 </html>
