--- a/index.html
+++ b/index.html
@@ -143,18 +143,20 @@
     }
 
     async function main() {
-      // alert("LINE Developers x Skooldio")
+      liff.ready.then(() => {
+        document.getElementById("isLoggedIn").append(liff.isLoggedIn() ? "true" : "false")
+        if(liff.isLoggedIn()){
+          getEnvironment()
+          getUserProfile()
+          getContext()
+          getFriendship()
+          createUniversalLink()
+        }else{
+          liff.login()
+        }
+      })
       await liff.init({ liffId: "1656769030-Z7qP92LY" })
-      document.getElementById("isLoggedIn").append(liff.isLoggedIn() ? "true" : "false")
-      if(liff.isLoggedIn()){
-        getEnvironment()
-        getUserProfile()
-        getContext()
-        getFriendship()
-        createUniversalLink()
-      }else{
-        // liff.login()
-      }
+      
     }
     main()
   </script>
